force-app/main/default/objects/Connector_Instance__c/Connector_Instance__c.object-meta.xml
<CustomObject>
    <description>Runtime connector instance state. Secrets are referenced through secure credentials and are not stored here.</description>
    <label>Connector Instance</label>
    <nameField>
        <label>Connector Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connector Instances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>