force-app/main/default/objects/Connector_Instance__c/fields/Connector_Label__c.field-meta.xml
<CustomField>
    <fullName>Connector_Label__c</fullName>
    <label>Connector Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>