force-app/main/default/objects/Connector_Instance__c/fields/Entitlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Status__c</fullName>
    <label>Entitlement Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>