force-app/main/default/objects/Connector_Instance__c/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <label>Health Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>