force-app/main/default/objects/Connector_Instance__c/fields/Last_Entitlement_Refresh_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Entitlement_Refresh_At__c</fullName>
    <label>Last Entitlement Refresh At</label>
    <type>DateTime</type>
</CustomField>