force-app/main/default/objects/Connector_Instance__c/fields/Last_Health_Check_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Health_Check_At__c</fullName>
    <label>Last Health Check At</label>
    <type>DateTime</type>
</CustomField>