force-app/main/default/objects/Connector_Instance__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Reference name only. Secrets remain in Named Credentials or External Credentials.</description>
    <label>Named Credential</label>
    <length>120</length>
    <type>Text</type>
</CustomField>